# zk

./: libbls12381.dylib  testData
bellman/src/: and.rs  and_mod.rs  lib.rs
bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
bellman/src/groth16/tests/: mod.rs
neo-zk-tools/: Cargo.toml
neo-zk-tools/src/: bls_extern.rs  lib.rs  test.rs
testBls12Contract/: testBls12Contract.sln
testBls12Contract/UnitTest/: Bls12Contract_UT.cs  UnitTest.csproj
testBls12Contract/testBls12Contract/: testBls12Contract.cs  testBls12Contract.csproj
