[package]
name = "neozktools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bls12_381 = "0.6"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
bson = "1.1.0"
pairing = { version = "0.21", optional = true }

[lib]
name = "bls12381"
crate-type = ["cdylib"]
